# gta1_re

./: .gitignore  CMakeLists.txt  README.md  reccmp-project.yml
.github/workflows/: ci.yml
mgl-on-sdl3/: CMakeLists.txt  main.c
mgl-on-sdl3/include/: mglwin.h  mgraph.h
scripts/: regenerate_import_libraries.sh
src/: city.cpp  city.h  common.h  compat.h  cutscene.cpp  cutscene.h  decomp.h  error.cpp  error.h  font.cpp  font.h  game.cpp  game.h  graphics.cpp  graphics.h  input.cpp  input.h  interface.cpp  interface.h  main.cpp  main.h  map.cpp  map.h  math_lut.cpp  math_lut.h  menu.cpp  menu.h  mission.cpp  mission.h  multiplayer.cpp  multiplayer.h  save.cpp  save.h  sound.cpp  sound.h  text.cpp  text.h  util.cpp  util.h  wraps.c
